modified:   chatglm_llm.py 	modified:   requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ cpm_kernels
 faiss-cpu
 gradio
 nltk
+accelerate
 detectron2@git+https://github.com/facebookresearch/detectron2.git@v0.6#egg=detectron2
