--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,6 @@ beautifulsoup4
 icetk
 cpm_kernels
 faiss-cpu
-gradio==3.24.1
+gradio
 nltk
 detectron2@git+https://github.com/facebookresearch/detectron2.git@v0.6#egg=detectron2
