--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,5 @@ cpm_kernels
 faiss-cpu
 detectron2@git+https://github.com/facebookresearch/detectron2.git@e2ce8dc#egg=detectron2
 wandb==0.13.0
+langchain-serve
+protobuf==3.19.0
