--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ beautifulsoup4
 icetk
 cpm_kernels
 faiss-cpu
-detectron2@git+https://github.com/facebookresearch/detectron2.git@e2ce8dc#egg=detectron2
+detectron2@git+https://github.com/facebookresearch/detectron2.git@v0.6#egg=detectron2
 wandb==0.13.0
 jina>=3.15.0
 langchain-serve
