Specify jina version as NOT elder than 3.15.2 and langchain-serve version as NOT elder than 0.0.24, each of which is the first official release can be installed successfully on platform Windows by poetry.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 repository = "https://github.com/thomas-yanxin/LangChain-ChatGLM-Webui"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<4.0"
+python = ">=3.9,<4.0"
 langchain = "0.0.147"
 fschat = "0.2.3"
 accelerate = "*"
@@ -25,8 +25,8 @@ faiss-cpu = "*"
 # TODO: uncomment next line when detectron2 support PEP517 and poetry.
 # detectron2 = { git = "https://github.com/facebookresearch/detectron2.git", tag = "v0.6" }
 wandb = "0.13.0"
-jina = { git = "https://github.com/jina-ai/jina.git", branch = "master" } # specify version 3.16.0 when available.
-langchain-serve = "*"
+jina = ">=3.15.2"
+langchain-serve = ">=0.0.24"
 protobuf = "3.19.0"
 
 [tool.poetry.extras]
@@ -37,4 +37,3 @@ layoutparser = ["layoutmodels", "tesseract"]
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
