--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ langchain==0.0.147
 fschat==0.2.3
 accelerate
 qdrant-client
-duckduckgo_search
+duckduckgo_search==2.9.5
 transformers>=4.28.0
 tokenizers
 unstructured[local-inference]
